@@ -1,4 +1,6 @@
   - Fix v-string to work with perl 5.8. RT#80034
+  - Fix issues stopping multiple FileTail inputs being used in the
+    same process.
 
 0.109
   - Really fix test fail :(
